# FineTune_MLLM

./: .gitignore  main.py  pyproject.toml
Model/MiniCPM-VL-4.5/: .msc  .mv  README.md  added_tokens.json  config.json  configuration_minicpm.py  generation_config.json  model-00001-of-00004.safetensors  model-00002-of-00004.safetensors  model-00003-of-00004.safetensors  model-00004-of-00004.safetensors  model.safetensors.index.json  modeling_minicpmv.py  processing_minicpmv.py  resampler.py  special_tokens_map.json  tokenization_minicpmv_fast.py  tokenizer_config.json
data/JSON/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+29 more)
utls/: performance_monitor.py  video_process.py  video_rename.py
